antlr/pathpolicyconstraints/pathpolicyconstraints_parser.go
// File generated by ANTLR. DO NOT EDIT.

package pathpolicyconstraints // PathPolicyConstraints
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "','", "", "'0'", "", "", "", "", "'#'", "'?'", "':'", "'+'", "'('",
	"')'", "'{'", "'}'", "'@'", "'G'", "'L'", "'REJECT'",
}
var symbolicNames = []string{
	"", "", "WHITESPACE", "ZERO", "NUM", "WILDCARDAS", "LEGACYAS", "AS", "HASH",
	"QUESTIONMARK", "ELSE", "PLUS", "LPAR", "RPAR", "LBRACE", "RBRACE", "MONKEYTAIL",
	"GLOBALPOLICY", "LOCALPOLICY", "REJECT",
}

var ruleNames = []string{
	"start", "query", "expression", "identifier", "isd", "as", "iface", "onepolicy",
	"policyindex",
}

type PathPolicyConstraintsParser struct {
	*antlr.BaseParser
}

// NewPathPolicyConstraintsParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *PathPolicyConstraintsParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewPathPolicyConstraintsParser(input antlr.TokenStream) *PathPolicyConstraintsParser {
	this := new(PathPolicyConstraintsParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "PathPolicyConstraints.g4"

	return this
}

// PathPolicyConstraintsParser tokens.
const (
	PathPolicyConstraintsParserEOF          = antlr.TokenEOF
	PathPolicyConstraintsParserT__0         = 1
	PathPolicyConstraintsParserWHITESPACE   = 2
	PathPolicyConstraintsParserZERO         = 3
	PathPolicyConstraintsParserNUM          = 4
	PathPolicyConstraintsParserWILDCARDAS   = 5
	PathPolicyConstraintsParserLEGACYAS     = 6
	PathPolicyConstraintsParserAS           = 7
	PathPolicyConstraintsParserHASH         = 8
	PathPolicyConstraintsParserQUESTIONMARK = 9
	PathPolicyConstraintsParserELSE         = 10
	PathPolicyConstraintsParserPLUS         = 11
	PathPolicyConstraintsParserLPAR         = 12
	PathPolicyConstraintsParserRPAR         = 13
	PathPolicyConstraintsParserLBRACE       = 14
	PathPolicyConstraintsParserRBRACE       = 15
	PathPolicyConstraintsParserMONKEYTAIL   = 16
	PathPolicyConstraintsParserGLOBALPOLICY = 17
	PathPolicyConstraintsParserLOCALPOLICY  = 18
	PathPolicyConstraintsParserREJECT       = 19
)

// PathPolicyConstraintsParser rules.
const (
	PathPolicyConstraintsParserRULE_start       = 0
	PathPolicyConstraintsParserRULE_query       = 1
	PathPolicyConstraintsParserRULE_expression  = 2
	PathPolicyConstraintsParserRULE_identifier  = 3
	PathPolicyConstraintsParserRULE_isd         = 4
	PathPolicyConstraintsParserRULE_as          = 5
	PathPolicyConstraintsParserRULE_iface       = 6
	PathPolicyConstraintsParserRULE_onepolicy   = 7
	PathPolicyConstraintsParserRULE_policyindex = 8
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PathPolicyConstraintsParserRULE_start
	return p
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PathPolicyConstraintsParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) LPAR() antlr.TerminalNode {
	return s.GetToken(PathPolicyConstraintsParserLPAR, 0)
}

func (s *StartContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *StartContext) RPAR() antlr.TerminalNode {
	return s.GetToken(PathPolicyConstraintsParserRPAR, 0)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.EnterStart(s)
	}
}

func (s *StartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.ExitStart(s)
	}
}

func (p *PathPolicyConstraintsParser) Start() (localctx IStartContext) {
	this := p
	_ = this

	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PathPolicyConstraintsParserRULE_start)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(18)
		p.Match(PathPolicyConstraintsParserLPAR)
	}
	{
		p.SetState(19)
		p.expression(0)
	}
	{
		p.SetState(20)
		p.Match(PathPolicyConstraintsParserRPAR)
	}

	return localctx
}

// IQueryContext is an interface to support dynamic dispatch.
type IQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsQueryContext differentiates from other interfaces.
	IsQueryContext()
}

type QueryContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueryContext() *QueryContext {
	var p = new(QueryContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PathPolicyConstraintsParserRULE_query
	return p
}

func (*QueryContext) IsQueryContext() {}

func NewQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryContext {
	var p = new(QueryContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PathPolicyConstraintsParserRULE_query

	return p
}

func (s *QueryContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryContext) CopyFrom(ctx *QueryContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *QueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type IfElseContext struct {
	*QueryContext
}

func NewIfElseContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *IfElseContext {
	var p = new(IfElseContext)

	p.QueryContext = NewEmptyQueryContext()
	p.parser = parser
	p.CopyFrom(ctx.(*QueryContext))

	return p
}

func (s *IfElseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IfElseContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(PathPolicyConstraintsParserLBRACE, 0)
}

func (s *IfElseContext) AllExpression() []IExpressionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExpressionContext)(nil)).Elem())
	var tst = make([]IExpressionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExpressionContext)
		}
	}

	return tst
}

func (s *IfElseContext) Expression(i int) IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *IfElseContext) QUESTIONMARK() antlr.TerminalNode {
	return s.GetToken(PathPolicyConstraintsParserQUESTIONMARK, 0)
}

func (s *IfElseContext) ELSE() antlr.TerminalNode {
	return s.GetToken(PathPolicyConstraintsParserELSE, 0)
}

func (s *IfElseContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(PathPolicyConstraintsParserRBRACE, 0)
}

func (s *IfElseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.EnterIfElse(s)
	}
}

func (s *IfElseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.ExitIfElse(s)
	}
}

type IfContext struct {
	*QueryContext
}

func NewIfContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *IfContext {
	var p = new(IfContext)

	p.QueryContext = NewEmptyQueryContext()
	p.parser = parser
	p.CopyFrom(ctx.(*QueryContext))

	return p
}

func (s *IfContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IfContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(PathPolicyConstraintsParserLBRACE, 0)
}

func (s *IfContext) AllExpression() []IExpressionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExpressionContext)(nil)).Elem())
	var tst = make([]IExpressionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExpressionContext)
		}
	}

	return tst
}

func (s *IfContext) Expression(i int) IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *IfContext) QUESTIONMARK() antlr.TerminalNode {
	return s.GetToken(PathPolicyConstraintsParserQUESTIONMARK, 0)
}

func (s *IfContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(PathPolicyConstraintsParserRBRACE, 0)
}

func (s *IfContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.EnterIf(s)
	}
}

func (s *IfContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.ExitIf(s)
	}
}

func (p *PathPolicyConstraintsParser) Query() (localctx IQueryContext) {
	this := p
	_ = this

	localctx = NewQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PathPolicyConstraintsParserRULE_query)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(36)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) {
	case 1:
		localctx = NewIfElseContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(22)
			p.Match(PathPolicyConstraintsParserLBRACE)
		}
		{
			p.SetState(23)
			p.expression(0)
		}
		{
			p.SetState(24)
			p.Match(PathPolicyConstraintsParserQUESTIONMARK)
		}
		{
			p.SetState(25)
			p.expression(0)
		}
		{
			p.SetState(26)
			p.Match(PathPolicyConstraintsParserELSE)
		}
		{
			p.SetState(27)
			p.expression(0)
		}
		{
			p.SetState(28)
			p.Match(PathPolicyConstraintsParserRBRACE)
		}

	case 2:
		localctx = NewIfContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(30)
			p.Match(PathPolicyConstraintsParserLBRACE)
		}
		{
			p.SetState(31)
			p.expression(0)
		}
		{
			p.SetState(32)
			p.Match(PathPolicyConstraintsParserQUESTIONMARK)
		}
		{
			p.SetState(33)
			p.expression(0)
		}
		{
			p.SetState(34)
			p.Match(PathPolicyConstraintsParserRBRACE)
		}

	}

	return localctx
}

// IExpressionContext is an interface to support dynamic dispatch.
type IExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExpressionContext differentiates from other interfaces.
	IsExpressionContext()
}

type ExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionContext() *ExpressionContext {
	var p = new(ExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PathPolicyConstraintsParserRULE_expression
	return p
}

func (*ExpressionContext) IsExpressionContext() {}

func NewExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionContext {
	var p = new(ExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PathPolicyConstraintsParserRULE_expression

	return p
}

func (s *ExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionContext) CopyFrom(ctx *ExpressionContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *ExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type ParensContext struct {
	*ExpressionContext
}

func NewParensContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ParensContext {
	var p = new(ParensContext)

	p.ExpressionContext = NewEmptyExpressionContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ExpressionContext))

	return p
}

func (s *ParensContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParensContext) LPAR() antlr.TerminalNode {
	return s.GetToken(PathPolicyConstraintsParserLPAR, 0)
}

func (s *ParensContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ParensContext) RPAR() antlr.TerminalNode {
	return s.GetToken(PathPolicyConstraintsParserRPAR, 0)
}

func (s *ParensContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.EnterParens(s)
	}
}

func (s *ParensContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.ExitParens(s)
	}
}

type ExpressionIdentifierContext struct {
	*ExpressionContext
}

func NewExpressionIdentifierContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExpressionIdentifierContext {
	var p = new(ExpressionIdentifierContext)

	p.ExpressionContext = NewEmptyExpressionContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ExpressionContext))

	return p
}

func (s *ExpressionIdentifierContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionIdentifierContext) Identifier() IIdentifierContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdentifierContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIdentifierContext)
}

func (s *ExpressionIdentifierContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.EnterExpressionIdentifier(s)
	}
}

func (s *ExpressionIdentifierContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.ExitExpressionIdentifier(s)
	}
}

type ExpressionConcatContext struct {
	*ExpressionContext
	left  IExpressionContext
	right IExpressionContext
}

func NewExpressionConcatContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExpressionConcatContext {
	var p = new(ExpressionConcatContext)

	p.ExpressionContext = NewEmptyExpressionContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ExpressionContext))

	return p
}

func (s *ExpressionConcatContext) GetLeft() IExpressionContext { return s.left }

func (s *ExpressionConcatContext) GetRight() IExpressionContext { return s.right }

func (s *ExpressionConcatContext) SetLeft(v IExpressionContext) { s.left = v }

func (s *ExpressionConcatContext) SetRight(v IExpressionContext) { s.right = v }

func (s *ExpressionConcatContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionConcatContext) PLUS() antlr.TerminalNode {
	return s.GetToken(PathPolicyConstraintsParserPLUS, 0)
}

func (s *ExpressionConcatContext) AllExpression() []IExpressionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExpressionContext)(nil)).Elem())
	var tst = make([]IExpressionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExpressionContext)
		}
	}

	return tst
}

func (s *ExpressionConcatContext) Expression(i int) IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ExpressionConcatContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.EnterExpressionConcat(s)
	}
}

func (s *ExpressionConcatContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.ExitExpressionConcat(s)
	}
}

type ExpressionQueryContext struct {
	*ExpressionContext
}

func NewExpressionQueryContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExpressionQueryContext {
	var p = new(ExpressionQueryContext)

	p.ExpressionContext = NewEmptyExpressionContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ExpressionContext))

	return p
}

func (s *ExpressionQueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionQueryContext) Query() IQueryContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IQueryContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IQueryContext)
}

func (s *ExpressionQueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.EnterExpressionQuery(s)
	}
}

func (s *ExpressionQueryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.ExitExpressionQuery(s)
	}
}

func (p *PathPolicyConstraintsParser) Expression() (localctx IExpressionContext) {
	return p.expression(0)
}

func (p *PathPolicyConstraintsParser) expression(_p int) (localctx IExpressionContext) {
	this := p
	_ = this

	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewExpressionContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IExpressionContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 4
	p.EnterRecursionRule(localctx, 4, PathPolicyConstraintsParserRULE_expression, _p)

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(45)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case PathPolicyConstraintsParserLPAR:
		localctx = NewParensContext(p, localctx)
		p.SetParserRuleContext(localctx)
		_prevctx = localctx

		{
			p.SetState(39)
			p.Match(PathPolicyConstraintsParserLPAR)
		}
		{
			p.SetState(40)
			p.expression(0)
		}
		{
			p.SetState(41)
			p.Match(PathPolicyConstraintsParserRPAR)
		}

	case PathPolicyConstraintsParserZERO, PathPolicyConstraintsParserNUM:
		localctx = NewExpressionIdentifierContext(p, localctx)
		p.SetParserRuleContext(localctx)
		_prevctx = localctx
		{
			p.SetState(43)
			p.Identifier()
		}

	case PathPolicyConstraintsParserLBRACE:
		localctx = NewExpressionQueryContext(p, localctx)
		p.SetParserRuleContext(localctx)
		_prevctx = localctx
		{
			p.SetState(44)
			p.Query()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}
	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(52)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			localctx = NewExpressionConcatContext(p, NewExpressionContext(p, _parentctx, _parentState))
			localctx.(*ExpressionConcatContext).left = _prevctx

			p.PushNewRecursionContext(localctx, _startState, PathPolicyConstraintsParserRULE_expression)
			p.SetState(47)

			if !(p.Precpred(p.GetParserRuleContext(), 3)) {
				panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 3)", ""))
			}
			{
				p.SetState(48)
				p.Match(PathPolicyConstraintsParserPLUS)
			}
			{
				p.SetState(49)

				var _x = p.expression(4)

				localctx.(*ExpressionConcatContext).right = _x
			}

		}
		p.SetState(54)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())
	}

	return localctx
}

// IIdentifierContext is an interface to support dynamic dispatch.
type IIdentifierContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsIdentifierContext differentiates from other interfaces.
	IsIdentifierContext()
}

type IdentifierContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIdentifierContext() *IdentifierContext {
	var p = new(IdentifierContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PathPolicyConstraintsParserRULE_identifier
	return p
}

func (*IdentifierContext) IsIdentifierContext() {}

func NewIdentifierContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IdentifierContext {
	var p = new(IdentifierContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PathPolicyConstraintsParserRULE_identifier

	return p
}

func (s *IdentifierContext) GetParser() antlr.Parser { return s.parser }

func (s *IdentifierContext) Isd() IIsdContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIsdContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIsdContext)
}

func (s *IdentifierContext) As() IAsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAsContext)
}

func (s *IdentifierContext) HASH() antlr.TerminalNode {
	return s.GetToken(PathPolicyConstraintsParserHASH, 0)
}

func (s *IdentifierContext) AllIface() []IIfaceContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IIfaceContext)(nil)).Elem())
	var tst = make([]IIfaceContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IIfaceContext)
		}
	}

	return tst
}

func (s *IdentifierContext) Iface(i int) IIfaceContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIfaceContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IIfaceContext)
}

func (s *IdentifierContext) MONKEYTAIL() antlr.TerminalNode {
	return s.GetToken(PathPolicyConstraintsParserMONKEYTAIL, 0)
}

func (s *IdentifierContext) Onepolicy() IOnepolicyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOnepolicyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOnepolicyContext)
}

func (s *IdentifierContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IdentifierContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *IdentifierContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.EnterIdentifier(s)
	}
}

func (s *IdentifierContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PathPolicyConstraintsListener); ok {
		listenerT.ExitIdentifier(s)
	}
}

func (p *PathPolicyConstraintsParser) Identifier() (localctx IIdentifierContext) {
	this := p
	_ = this

	localctx = NewIdentifierContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, PathPolicyConstraintsParserRULE_identifier)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(55)
		p.Isd()
	}
	{
		p.SetState(56)
		p.As()
	}
	{
		p.SetState(57)
		p.Match(PathPolicyConstraintsParserHASH)
	}
	{
		p.SetState(58)
		p.Iface()
	}
	{
		p.SetState(59)
		p.Match(PathPolicyConstraintsParserT__0)
	}
	{
		p.SetState(60)
		p.Iface()
	}
	{
		p.SetState(61)
		p.Match(PathPolicyConstraintsParserMONKEYTAIL)
	}
	{
		p.SetState(62)
		p.Onepolicy()
	}

	return localctx
}

// IIsdContext is an interface to support dynamic dispatch.
type IIsdContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsIsdContext differentiates from other interfaces.
	IsIsdContext()
}

type IsdContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIsdContext() *IsdContext {
	var p = new(IsdContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PathPolicyConstraintsParserRULE_isd
	return p
}

func (*IsdContext) IsIsdContext() {}

func NewIsdContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IsdContext {
	var p = new(IsdContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PathPolicyConstraintsParserRULE_isd

	return p
}

func (s *IsdContext) GetParser() antlr.Parser { return s.parser }

func (s *IsdContext) CopyFrom(ctx *IsdContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *IsdContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IsdContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type WildcardISDContext struct {
	*IsdContext
}

func NewWildcardISDContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *WildcardISDContext {
	var p = new(WildcardISDContext)

	p.IsdContext = NewEmptyIsdContext()
	p.parser = parser
	p.CopyFrom(ctx.(*IsdContext))

	return p
}

func (s *WildcardISDContext) GetRuleContext() antlr.RuleContext {
	return s
}
